@@ -12,6 +12,7 @@ Bug Fixes::
 
     * compiler: CLI return code fixed
     * compiler: handle varPtr in BinOp expressions
+    * compiler: reset compiler options on each compiler run
     * ide: do not crash if non-existing file is specified as cmd line argument
     * ide: fix refresh while program is running
     * runtime: fix _aqb shutdown crash
